@@ -7,6 +7,11 @@ cdebconf (0.131) UNRELEASED; urgency=low
   [ Max Vozeler ]
   * Fix *_can_align() function signatures to match the prototype.
 
+  [ Jérémy Bobbio ]
+  * In the GTK+ frontend, the "Go Back" button is now created before calling
+    question handlers.  This allow the button ordering to stay coherent when
+    plugins define custom buttons.
+
  -- Frans Pop <fjp@debian.org>  Sun, 20 Apr 2008 18:21:40 +0200
 
 cdebconf (0.130) unstable; urgency=low
